# SimpleBedrockMOd

./: CMakeLists.txt
src/: dllmain.cpp  sbm.hpp
src/hooks/: hook_manager.cpp  hook_manager.hpp  keyboard.cpp  keyboard.hpp
src/sdk/: hashed_string.cpp  hashed_string.hpp  minecraft_render_ui_context.hpp  sem_ver.cpp  sem_ver.hpp  threading.cpp  threading.hpp
src/sdk/block/: block_pos.hpp
src/sdk/brstd/: bitset.hpp
src/sdk/client/: material_ptr.cpp  material_ptr.hpp  particle_system.cpp  particle_system.hpp  render_params.cpp  render_params.hpp
src/sdk/memory/: packed_pointer.cpp  packed_pointer.hpp  static_optimized_string.cpp  static_optimized_string.hpp
src/sdk/molang/: expression_node.cpp  expression_node.hpp  expression_op.hpp  molang_parse_config.hpp  molang_script_arg_data.cpp  molang_script_arg_data.hpp  molang_variable_map.cpp  molang_variable_map.hpp
